<?xml version="1.0"?>
<package format="3">
  <name>golfcart_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch profiles for simulation and real hardware.</description>

  <maintainer email="you@example.com">Golfcart Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>golfcart_navigation</exec_depend>
  <exec_depend>zed_depth_to_laserscan</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
